<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.qxmagic.railwayengineerternimal.ui.login.ForgetPasswordActivity">

    <include layout="@layout/common_title_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginEnd="@dimen/margin_20dp"
        android:layout_marginStart="@dimen/margin_20dp"
        android:layout_marginTop="@dimen/margin_20dp"
        android:background="@drawable/bg_shape_login_edit">

        <EditText
            android:id="@+id/forget_phone_edit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/transparent_color"
            android:drawablePadding="10dp"
            android:drawableStart="@mipmap/login_username_icon"
            android:ellipsize="end"
            android:hint="@string/edit_phone_hint"
            android:inputType="phone"
            android:maxLines="1"
            android:paddingEnd="@dimen/margin_15dp"
            android:paddingStart="@dimen/margin_15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray_9b9b9b_color"
            android:textSize="16sp" />


        <Button
            android:id="@+id/modify_get_ver_code_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/blue_2f80e7_color"
            android:gravity="center"
            android:paddingEnd="2dp"
            android:paddingStart="2dp"
            android:text="@string/get_ver_code"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:visibility="visible" />
    </LinearLayout>

    <EditText
        android:id="@+id/forget_ver_edit"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginEnd="@dimen/margin_20dp"
        android:layout_marginStart="@dimen/margin_20dp"
        android:layout_marginTop="@dimen/margin_20dp"
        android:background="@drawable/bg_shape_login_edit"
        android:drawablePadding="10dp"
        android:drawableStart="@mipmap/login_vercode_icon"
        android:hint="@string/ver_code_hint"
        android:inputType="number"
        android:paddingEnd="@dimen/margin_15dp"
        android:paddingStart="@dimen/margin_15dp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray_9b9b9b_color"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginEnd="@dimen/margin_25dp"
        android:layout_marginStart="@dimen/margin_25dp"
        android:layout_marginTop="@dimen/margin_30dp"
        android:background="@drawable/bg_shape_login_btn"
        android:gravity="center"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="16sp" />
</LinearLayout>
