<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_fragment_bg_color"
    android:orientation="vertical"
    tools:context="com.qxmagic.railwayengineerternimal.ui.mine.ModifyPasswordActivity">

    <include layout="@layout/common_title_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/font_size_15dp"
        android:layout_marginStart="@dimen/font_size_15dp"
        android:layout_marginTop="@dimen/font_size_30dp">

        <EditText
            android:id="@+id/modify_original_password_edit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/shape_modify_password_edit_bg"
            android:drawablePadding="@dimen/font_size_15dp"
            android:drawableStart="@mipmap/modify_originalpassword_icon"
            android:hint="@string/edit_original_password"
            android:inputType="textPassword"
            android:paddingEnd="@dimen/font_size_15dp"
            android:paddingStart="@dimen/font_size_15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray_cfdce2_color"
            android:textSize="@dimen/font_size_16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/font_size_15dp"
        android:layout_marginStart="@dimen/font_size_15dp"
        android:layout_marginTop="@dimen/font_size_20dp">

        <EditText
            android:id="@+id/modify_newpassword_edit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/shape_modify_password_edit_bg"
            android:drawablePadding="@dimen/font_size_15dp"
            android:drawableStart="@mipmap/modify_newpassword_icon"
            android:hint="@string/edit_new_password"
            android:inputType="textPassword"
            android:paddingEnd="@dimen/font_size_15dp"
            android:paddingStart="@dimen/font_size_15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray_cfdce2_color"
            android:textSize="@dimen/font_size_16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/font_size_15dp"
        android:layout_marginStart="@dimen/font_size_15dp"
        android:layout_marginTop="@dimen/font_size_20dp">

        <EditText
            android:id="@+id/modify_confirm_newpassword_edit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/shape_modify_password_edit_bg"
            android:drawablePadding="@dimen/font_size_15dp"
            android:drawableStart="@mipmap/modify_newpassword_icon"
            android:hint="@string/edit_confirm_password"
            android:inputType="textPassword"
            android:paddingEnd="@dimen/font_size_15dp"
            android:paddingStart="@dimen/font_size_15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray_cfdce2_color"
            android:textSize="@dimen/font_size_16sp" />
    </LinearLayout>

    <Button
        android:id="@+id/modify_confirm_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginEnd="@dimen/font_size_15dp"
        android:layout_marginStart="@dimen/font_size_15dp"
        android:layout_marginTop="@dimen/font_size_30dp"
        android:background="@drawable/shape_modify_password_confirmbtn_bg"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_18sp" />

</LinearLayout>
