<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- 内容 -->
    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/navigate_top_line"
        android:layout_alignParentTop="true" />

    <View
        android:id="@+id/navigate_top_line"
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_above="@+id/main_navigate"
        android:background="@color/gray_a0a0a0_color" />

    <LinearLayout
        android:id="@+id/main_navigate"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@color/white"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/main_reception_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:id="@+id/main_reception_text"
                style="@style/main_navi_txt_style"
                android:text="@string/reception_desk" />

            <ImageView
                android:id="@+id/main_event_img"
                style="@style/main_navi_img_style"
                android:layout_above="@id/main_reception_text"
                android:background="@drawable/selector_main_reception_desk"
                android:contentDescription="@null" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/main_knowledge_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:id="@+id/main_knowledge_text"
                style="@style/main_navi_txt_style"
                android:text="@string/knowledge_base" />

            <ImageView
                android:id="@+id/main_knowledge_img"
                style="@style/main_navi_img_style"
                android:layout_above="@id/main_knowledge_text"
                android:background="@drawable/selector_main_knowledge_base"
                android:contentDescription="@null" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/main_configuration_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:id="@+id/main_configuration_text"
                style="@style/main_navi_txt_style"
                android:text="@string/configuration_items" />

            <ImageView
                android:id="@+id/main_configuration_img"
                style="@style/main_navi_img_style"
                android:layout_above="@id/main_configuration_text"
                android:background="@drawable/selector_main_configration_items"
                android:contentDescription="@null" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/main_mine_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:id="@+id/main_mine_text"
                style="@style/main_navi_txt_style"
                android:text="@string/mine" />

            <ImageView
                android:id="@+id/main_mine_img"
                style="@style/main_navi_img_style"
                android:layout_above="@id/main_mine_text"
                android:background="@drawable/selector_main_mine"
                android:contentDescription="@null" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>
