<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mine_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_fragment_bg_color"
    android:orientation="vertical">

    <include layout="@layout/common_title_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/font_size_15dp">

        <ImageView
            android:id="@+id/mine_portrait"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:scaleType="centerCrop"
            android:src="@mipmap/mine_portrait_icon" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/font_size_10dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/mine_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/app_name"
                android:textColor="@color/black_252525_color"
                android:textSize="@dimen/font_size_14sp" />

            <TextView
                android:id="@+id/mine_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/font_size_10dp"
                android:gravity="center"
                android:text="@string/mine_user"
                android:textColor="@color/black_252525_color"
                android:textSize="@dimen/font_size_14sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/mine_logout_text"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:background="@drawable/shape_mine_logout_bg"
            android:gravity="center"
            android:text="@string/mine_logout"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/font_size_16sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray_a0a0a0_color" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="@dimen/font_size_10dp"
        android:background="@color/gray_a0a0a0_color" />

    <LinearLayout
        android:id="@+id/mine_modify_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/font_size_10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:scaleType="centerCrop"
            android:src="@mipmap/mine_modify_password_icon" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/font_size_11dp"
            android:layout_weight="1"
            android:text="@string/mine_modify_password"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_14sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:scaleType="centerCrop"
            android:src="@mipmap/mine_next_icon" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray_a0a0a0_color" />

    <LinearLayout
        android:id="@+id/mine_about_us"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/font_size_10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:scaleType="centerCrop"
            android:src="@mipmap/mine_about_us_icon" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/font_size_11dp"
            android:layout_weight="1"
            android:text="@string/mine_about_us"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_14sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:scaleType="centerCrop"
            android:src="@mipmap/mine_next_icon" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray_a0a0a0_color" />

    <LinearLayout
        android:id="@+id/mine_setting"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/font_size_10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:scaleType="centerCrop"
            android:src="@mipmap/mine_setting_icon" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/font_size_11dp"
            android:layout_weight="1"
            android:text="@string/mine_setting"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_14sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:scaleType="centerCrop"
            android:src="@mipmap/mine_next_icon" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray_a0a0a0_color" />
</LinearLayout>
